hphp/hack/test/typecheck/option_mixed.php.exp
File "option_mixed.php", line 6, characters 5-10:
`?mixed` is a redundant typehint - just use `mixed` (Typing[4068])
File "option_mixed.php", line 8, characters 9-14:
`?mixed` is a redundant typehint - just use `mixed` (Typing[4068])
