hphp/hack/test/typecheck/option_mixed.php
<?hh

class C<T> {}

function f<T>(): void {
  f<?mixed>();

  new C<?mixed>();
}
